--- a/src/main/webapp/i18n/en/vote.json
+++ b/src/main/webapp/i18n/en/vote.json
@@ -16,9 +16,9 @@
             "detail": {
                 "title": "Vote"
             },
-            "nombreVote": "Nombre Vote",
-            "jeu": "Jeu",
-            "evenement": "Evenement"
+            "evenement": "Evenement",
+            "user": "User",
+            "jeu": "Jeu"
         }
     }
 }
