--- a/src/main/webapp/i18n/en/sphere.json
+++ b/src/main/webapp/i18n/en/sphere.json
@@ -17,7 +17,8 @@
                 "title": "Sphere"
             },
             "nom": "Nom",
-            "evenement": "Evenement"
+            "evenement": "Evenement",
+            "administrateur": "Administrateur"
         }
     }
 }
