--- a/src/main/webapp/i18n/ja/evenement.json
+++ b/src/main/webapp/i18n/ja/evenement.json
@@ -18,10 +18,11 @@
             },
             "date": "Date",
             "lieu": "Lieu",
-            "dateFinVote": "Date Fin Vote",
             "nom": "Nom",
+            "dateFinVote": "Date Fin Vote",
             "sphere": "Sphere",
-            "vote": "Vote"
+            "jeux": "Jeux",
+            "votes": "Votes"
         }
     }
 }
