--- a/src/main/webapp/i18n/fr/jeu.json
+++ b/src/main/webapp/i18n/fr/jeu.json
@@ -25,7 +25,8 @@
             "genre": "Genre",
             "evenements": "Evenements",
             "votes": "Votes",
-            "proprietaire": "Proprietaire"
+            "proprietaire": "Proprietaire",
+            "minutes": "Minutes"
         }
     }
 }
