--- a/src/main/webapp/i18n/fr/sphere.json
+++ b/src/main/webapp/i18n/fr/sphere.json
@@ -17,8 +17,9 @@
                 "title": "Sphere"
             },
             "nom": "Nom",
-            "evenement": "Evenement",
-            "administrateur": "Administrateur"
+            "administrateur": "Administrateur",
+            "evenements": "Evenements",
+            "abonnes": "Abonnes"
         }
     }
 }
