--- a/src/main/webapp/i18n/ja/evenement.json
+++ b/src/main/webapp/i18n/ja/evenement.json
@@ -20,9 +20,9 @@
             "lieu": "Lieu",
             "nom": "Nom",
             "dateFinVote": "Date Fin Vote",
-            "sphere": "Sphere",
             "jeux": "Jeux",
-            "votes": "Votes"
+            "votes": "Votes",
+            "sphere": "Sphere"
         }
     }
 }
