Ajout Pipe vérification présence élement dans liste

--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -100,7 +100,8 @@
             "edit": "Edit",
             "open": "Open",
             "save": "Save",
-            "view": "View"
+            "view": "View",
+            "rejoindre": "Join"
         },
         "detail": {
             "field": "Field",
