--- a/src/main/webapp/i18n/ja/global.json
+++ b/src/main/webapp/i18n/ja/global.json
@@ -100,7 +100,8 @@
             "edit": "編集",
             "open": "Open",
             "save": "保存",
-            "view": "表示"
+            "view": "表示",
+            "rejoindre": "会います"
         },
         "detail": {
             "field": "フィールド",
