[Sphere] abonnement et désabonnement

--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -101,7 +101,8 @@
             "open": "Open",
             "save": "Save",
             "view": "View",
-            "rejoindre": "Join"
+            "rejoindre": "Join",
+            "quitter": "Leave"
         },
         "detail": {
             "field": "Field",
