[EVENEMENT] Création évenement pour une sphère -- Pb gestion affichage sphere à l'arrivée sur la page

--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -102,7 +102,8 @@
             "save": "Save",
             "view": "View",
             "rejoindre": "Join",
-            "quitter": "Leave"
+            "quitter": "Leave",
+            "event": "Plan event"
         },
         "detail": {
             "field": "Field",
