--- a/src/main/webapp/i18n/ja/global.json
+++ b/src/main/webapp/i18n/ja/global.json
@@ -102,7 +102,8 @@
             "save": "保存",
             "view": "表示",
             "rejoindre": "会います",
-            "quitter": "去ります"
+            "quitter": "去ります",
+            "event": "イベントを開催する"
         },
         "detail": {
             "field": "フィールド",
