--- a/src/main/webapp/i18n/ja/home.json
+++ b/src/main/webapp/i18n/ja/home.json
@@ -1,6 +1,6 @@
 {
     "home": {
-        "title": "ようこそ, Java Hipster!",
+        "title": "ようこそ, {{username}} !",
         "subtitle": "ここはトップページです。",
         "logged": {
             "message": "\"{{username}}\"としてログインしています。"
