[MENU] Mise en place menu Spheres

--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -11,6 +11,13 @@
                     "communaute": "My community's game library"
                 }
             },
+            "sphere": {
+                "main": "Spheres",
+                "communaute": {
+                    "user": "My spheres",
+                    "all": "Search for spheres"
+                }
+            },
             "jhipster-needle-menu-add-element": "JHipster will add additional menu entries here (do not translate!)",
             "entities": {
                 "main": "Entities",
