--- a/src/main/webapp/i18n/fr/home.json
+++ b/src/main/webapp/i18n/fr/home.json
@@ -3,7 +3,7 @@
         "title": "Bienvenue, {{username}} !",
         "subtitle": "Ceci est votre page d'accueil",
         "logged": {
-            "message": "Vous êtes connecté en tant que \"{{username}}\"."
+            "message": "Vous êtes connecté en tant que {{username}}."
         },
         "question": "Si vous avez des questions à propos de JHipster :",
         "link": {
@@ -14,6 +14,19 @@
             "follow": "Suivez @java_hipster sur Twitter"
         },
         "like": "Si vous aimez JHipster, donnez nous une étoile sur",
-        "github": "GitHub "
+        "github": "GitHub ",
+        "section": {
+            "calendrier": {
+                "titre": "Mes évènements du mois"
+            },
+            "nouveaute": {
+                "titre": "Nouveautés"
+            },
+            "votes": {
+                "titre": "Votes",
+                "message": "{{nombreEvenement}} vote(s) en attente",
+                "bouton": "Je vais voter !"
+            }
+        }
     }
 }
