[VOTE] Listing des votes en cours pour l'utilisateur

--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -117,7 +117,8 @@
             "view": "View",
             "rejoindre": "Join",
             "quitter": "Leave",
-            "event": "Plan event"
+            "event": "Plan event",
+            "voter": "Vote !"
         },
         "detail": {
             "field": "Field",
