--- a/src/main/webapp/i18n/fr/global.json
+++ b/src/main/webapp/i18n/fr/global.json
@@ -120,7 +120,8 @@
             "view": "Voir",
             "rejoindre": "Rejoindre",
             "quitter": "Quitter",
-            "event": "Organiser évènement"
+            "event": "Organiser évènement",
+            "voter": "Voter !"
         },
         "detail": {
             "field": "Champs",
