[CALENDRIER] Résumé des votes

--- a/src/main/webapp/i18n/en/vote.json
+++ b/src/main/webapp/i18n/en/vote.json
@@ -23,6 +23,10 @@
             "dateFin": "Vote until",
             "message": {
                 "aucun": "No vote pending"
+            },
+            "popup": {
+                "titre": "Votes' summary",
+                "aucun": "No vote"
             }
         }
     }
