--- a/src/main/webapp/i18n/fr/login.json
+++ b/src/main/webapp/i18n/fr/login.json
@@ -1,6 +1,6 @@
 {
     "login": {
-        "title": "Authentification",
+        "title": "Se connecter",
         "form": {
             "password": "Mot de passe",
             "password.placeholder": "Votre mot de passe",
