[EMAIL] Envoi d'un email à la cloture des votes d'un evenement

--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -25,3 +25,10 @@ email.social.registration.title=socialGame account activation
 email.social.registration.greeting=Dear {0}
 email.social.registration.text1=Your socialGame account has been created with a {0} connection.
 email.social.registration.text2=Regards,
+
+#End vote email
+email.end_vote.title=End of vote
+email.end_vote.greeting=Dear {0}
+email.end_vote.text1=Les votes pour le prochain évènement de la sphère {0} viennent de prendre fin.
+email.end_vote.text2=Veuillez vous connecter afin de prendre connaissance des résultats.
+email.end_vote.text3=Regards,
