--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -25,3 +25,10 @@ email.social.registration.title=Activation de votre compte socialGame
 email.social.registration.greeting=Cher {0}
 email.social.registration.text1=Votre compte socialGame a bien été créé via une connexion {0}.
 email.social.registration.text2=Cordialement,
+
+#End vote email
+email.end_vote.title=Fin des votes
+email.end_vote.greeting=Cher {0}
+email.end_vote.text1=Les votes pour le prochain évènement de la sphère {0} viennent de prendre fin.
+email.end_vote.text2=Veuillez vous connecter afin de prendre connaissance des résultats.
+email.end_vote.text3=Cordialement,
