[EMAIL] Envoi d'un email à la création d'un évènement

--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -32,3 +32,10 @@ email.end_vote.greeting=Dear {0}
 email.end_vote.text1=Les votes pour le prochain évènement de la sphère {0} viennent de prendre fin.
 email.end_vote.text2=Veuillez vous connecter afin de prendre connaissance des résultats.
 email.end_vote.text3=Regards,
+
+#Event creation email
+email.event_creation.title=Nouvel évènement
+email.event_creation.greeting=Dear {0}
+email.event_creation.text1=Un nouvel évènement vient d'etre créé pour la sphère {0}.
+email.event_creation.text2=A vos votes !
+email.event_creation.text3=Regards,
