--- a/src/main/webapp/i18n/fr/evenement.json
+++ b/src/main/webapp/i18n/fr/evenement.json
@@ -2,19 +2,19 @@
     "socialGameApp": {
         "evenement" : {
             "home": {
-                "title": "Evenements",
-                "createLabel": "Créer un nouveau Evenement",
-                "createOrEditLabel": "Créer ou éditer un Evenement",
-                "search": "Recherche pour Evenement"
+                "title": "Evènements",
+                "createLabel": "Créer un nouvel évènement",
+                "createOrEditLabel": "Créer ou éditer un évènement",
+                "search": "Recherche pour évènement"
             },
-            "created": "Un nouveau Evenement a été créé avec l'identifiant {{ param }}",
-            "updated": "Le Evenement avec l'identifiant {{ param }} a été mis à jour",
-            "deleted": "Le Evenement avec l'identifiant {{ param }} a été supprimé",
+            "created": "Un nouveau évènement a été créé",
+            "updated": "L'évènement a été mis à jour",
+            "deleted": "L'évènement a été supprimé",
             "delete": {
-                "question": "Etes-vous certain de vouloir supprimer le Evenement {{ id }} ?"
+                "question": "Etes-vous certain de vouloir supprimer cet évènement ?"
             },
             "detail": {
-                "title": "Evenement"
+                "title": "Evènement"
             },
             "date": "Date",
             "lieu": "Lieu",
@@ -22,7 +22,7 @@
             "dateFinVote": "Date Fin Vote",
             "jeux": "Jeux",
             "votes": "Votes",
-            "sphere": "Sphere"
+            "sphere": "Sphère"
         }
     }
 }
