--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -59,7 +59,9 @@
             "confirmpassword": "New password confirmation",
             "confirmpassword.placeholder": "Confirm the new password",
             "email": "Email",
-            "email.placeholder": "Your email"
+            "email.placeholder": "Your email",
+            "avatar": "Avatar",
+            "avatar.placeholder": "Image's URL path (http(s)://...)"
         },
         "messages": {
             "info": {
