Changement affichage liste jeux dans création d'évènement

--- a/src/main/webapp/i18n/en/evenement.json
+++ b/src/main/webapp/i18n/en/evenement.json
@@ -22,7 +22,12 @@
             "dateFinVote": "Date Fin Vote",
             "jeux": "Jeux",
             "votes": "Votes",
-            "sphere": "Sphere"
+            "sphere": "Sphere",
+            "dropdown": {
+                "placeholder": "Select a game",
+                "toutSelectionner": "Select all",
+                "toutDeselectionner": "Unselect all"
+            }
         }
     }
 }
